Changed app name

--- a/ios/ReVersify.xcodeproj/xcshareddata/xcschemes/ReVersify.xcscheme
+++ b/ios/ReVersify.xcodeproj/xcshareddata/xcschemes/ReVersify.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ReVersify.app"
-               BlueprintName = "ReVersify"
-               ReferencedContainer = "container:ReVersify.xcodeproj">
+               BuildableName = "reVersify.app"
+               BlueprintName = "reVersify"
+               ReferencedContainer = "container:reVersify.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ReVersifyTests.xctest"
-               BlueprintName = "ReVersifyTests"
-               ReferencedContainer = "container:ReVersify.xcodeproj">
+               BuildableName = "reVersifyTests.xctest"
+               BlueprintName = "reVersifyTests"
+               ReferencedContainer = "container:reVersify.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ReVersifyTests.xctest"
-               BlueprintName = "ReVersifyTests"
-               ReferencedContainer = "container:ReVersify.xcodeproj">
+               BuildableName = "reVersifyTests.xctest"
+               BlueprintName = "reVersifyTests"
+               ReferencedContainer = "container:reVersify.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReVersify.app"
-            BlueprintName = "ReVersify"
-            ReferencedContainer = "container:ReVersify.xcodeproj">
+            BuildableName = "reVersify.app"
+            BlueprintName = "reVersify"
+            ReferencedContainer = "container:reVersify.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReVersify.app"
-            BlueprintName = "ReVersify"
-            ReferencedContainer = "container:ReVersify.xcodeproj">
+            BuildableName = "reVersify.app"
+            BlueprintName = "reVersify"
+            ReferencedContainer = "container:reVersify.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReVersify.app"
-            BlueprintName = "ReVersify"
-            ReferencedContainer = "container:ReVersify.xcodeproj">
+            BuildableName = "reVersify.app"
+            BlueprintName = "reVersify"
+            ReferencedContainer = "container:reVersify.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
